@@ -1,3 +1,9 @@
+2008-01-03  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
+	(drawHorizontalItem): Check visibility of average marker,
+	(drawVerticalItem): Likewise.
+
 2007-12-20  David Gilbert  <david.gilbert@object-refinery.com>
 
     Fixes bug 1848961:
